Home - 16 may commit - problem with appending session id still persists

--- a/app/.htaccess
+++ b/app/.htaccess
@@ -3,3 +3,5 @@
     RewriteRule    ^$    webroot/    [L]
     RewriteRule    (.*) webroot/$1    [L]
  </IfModule>
+
+#php_flag session.use_trans_sid on
